Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52527

Program crash when programmatically deleting a QTabWidget tab that is being dragged

    XMLWordPrintable

Details

    • 5fb2dceab46ede44346a192a9f270b2bb002b5a5 (qtbase/5.6, 20.4.2016, 5.6.1)

    Description

      When user programmatically deletes a tab that is being dragged at highest index, program crashes from:

      ASSERT failure in QList<T>::operator[]: "index out of range", file ..\..\include
      /QtCore/../../src/corelib/tools/qlist.h, line 539
      

      Notice that crash does not happen if the dragged tab is not at the highest index position when delete is called.

      Steps to reproduce:

      • Run the attached sample
      • Start dragging any tab of the TabWidget
      • Drag the tab to rightmost position (highest index)
      • (If the dragged tab already was at rightmost position, it doesn't have to change index to reproduce the bug, as long as it's just being dragged)
      • While dragging the tab, press control + F4 shortcut (Linux: F4) to delete the given tab
      • Program crashes

      Attachments

        1. qtbug52527_diag.diff
          2 kB
        2. qtbug52527_stack.txt
          26 kB
        3. qtbug52527.zip
          1 kB
        4. testtabwidget.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes